Bug 283444 - Boolean fields are always shown with checkmark in list view, no matter the value
Summary: Boolean fields are always shown with checkmark in list view, no matter the value
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.4
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
: 290907 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-06 04:58 UTC by Robby Stephenson
Modified: 2012-01-08 21:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2011-10-06 04:58:55 UTC
Version:           2.3.4 (using KDE 4.6.5) 
OS:                Linux

Regardless of the value of the field, the column view always shows a checkmark.

Reproducible: Didn't try

Steps to Reproduce:
Show checkmark


Expected Results:  
No checkmark for empty values
Comment 1 Robby Stephenson 2011-10-06 05:16:07 UTC
Git commit 6678c6936bb59eed1c11d23808dc76dfb4e3df29 by Robby Stephenson.
Committed on 06/10/2011 at 07:14.
Pushed by rstephenson into branch '2.3'.

Only show boolean checkmarks when field values are not empty

The entry value was not read before returning a checkmark icon
for boolean fields. This was a regression in Tellico 2.3.4.
BUG: 283444
FIXED-IN: 2.3.5

M  +4    -0    ChangeLog
M  +9    -8    src/models/entrymodel.cpp

http://commits.kde.org/tellico/6678c6936bb59eed1c11d23808dc76dfb4e3df29
Comment 2 Robby Stephenson 2011-10-06 05:27:00 UTC
Git commit c1820084b5217a003a68d1ec557444872bd834fd by Robby Stephenson.
Committed on 06/10/2011 at 07:14.
Pushed by rstephenson into branch 'master'.

Only show boolean checkmarks when field values are not empty

The entry value was not read before returning a checkmark icon
for boolean fields. This was a regression in Tellico 2.3.4.
BUG: 283444
FIXED-IN: 2.3.5

M  +4    -0    ChangeLog
M  +9    -7    src/models/entrymodel.cpp

http://commits.kde.org/tellico/c1820084b5217a003a68d1ec557444872bd834fd
Comment 3 Robby Stephenson 2012-01-08 21:06:24 UTC
*** Bug 290907 has been marked as a duplicate of this bug. ***