Only show boolean checkmarks when field values are not empty

The entry value was not read before returning a checkmark icon
for boolean fields. This was a regression in Tellico 2.3.4.
BUG: 283444
FIXED-IN: 2.3.5